--- a/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Completed.ipynb
+++ b/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Completed.ipynb
@@ -3241,30 +3241,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "places = [\" \",\"Argentina\", \" \", \"San Diego\",\"\",\"  \",\"\",\"Boston\",\"New York\",\"DC\", \"          \"]\n",
     "\n",
-    "# Remove all of the empty string\n"
+    "# Remove all of the empty string\n",
+    "\n",
+    "# loop thru list, find empty strings (if it begins with a space?)\n",
+    "def solution(cities):\n",
+    "    cities.split(' ')\n",
+    "    x = ' '\n",
+    "    for city in cities:\n",
+    "        if len(city) > 0 and x != city[0]:\n",
+    "            return city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Argentina', 'San Diego', 'Boston', 'New York', 'DC']\n"
+     ]
+    }
+   ],
+   "source": [
+    "spaces = list(filter(solution, places))\n",
+    "print(spaces)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3278,11 +3290,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "authors = [\"Joel Carter\", \"Victor aNisimov\", \"Andrew P. Garfield\", \"David hassELHOFF\", \"Gary A.J. Bernstein\"]\n"
+    "authors = [\"Joel Carter\", \"Victor aNisimov\", \"Andrew P. Garfield\", \"David hassELHOFF\", \"Gary A.J. Bernstein\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Joel Carter',\n",
+       " 'Victor aNisimov',\n",
+       " 'Andrew P. Garfield',\n",
+       " 'David hassELHOFF',\n",
+       " 'Gary A.J. Bernstein']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#define function to take in list\n",
+    "def sort_names(authors):\n",
+    "    # sort the list by a specific key (the index of 1 in split string)\n",
+    "    lowercase = sorted(authors, key=str.casefold)\n",
+    "    lowercase.sort(key=lambda x: x.split()[-1])\n",
+    "    return authors\n",
+    "\n",
+    "sort_names(authors)"
    ]
   },
   {
@@ -3290,7 +3334,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# why is it not recognizing the lowercase a?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3371,14 +3417,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SEQ = ['0', '1', '1', '2', '3', '5', '8', '13']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "RecursionError",
+     "evalue": "maximum recursion depth exceeded",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n\u001b[0;32m---> 13\u001b[0m fibfx(\u001b[38;5;241m10\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
+      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
+      "    \u001b[0;31m[... skipping similar frames: fibfx at line 9 (2971 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
+      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+     ]
+    }
+   ],
+   "source": [
+    "def fibfx(num):\n",
+    "    fib_seq = []\n",
+    "    i = 0\n",
+    "    fib_seq.append(i)\n",
+    "    while i <= num:\n",
+    "        i = 2\n",
+    "        i = (i-1) + (i-2)\n",
+    "        fib_seq.append(i)\n",
+    "        return fibfx(i)\n",
+    "    else:\n",
+    "        return fib_seq\n",
+    "        \n",
+    "fibfx(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in class \n",
+    "def factorial(x):\n",
+    "    i = 1\n",
+    "    output = 1\n",
+    "    while i <= x:\n",
+    "        output *= i\n",
+    "        i += 1\n",
+    "    return output\n",
+    "\n",
+    "factorial(5)"
+   ]
   },
   {
    "cell_type": "code",
