--- a/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Completed.ipynb
+++ b/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Completed.ipynb
@@ -3418,81 +3418,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SEQ = ['0', '1', '1', '2', '3', '5', '8', '13']"
+    "# SEQ = ['0', '1', '1', '2', '3', '5', '8', '13']\n",
+    "# base case = 0 , up until a given number (num that is inputted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n\u001b[0;32m---> 13\u001b[0m fibfx(\u001b[38;5;241m10\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
-      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
-      "    \u001b[0;31m[... skipping similar frames: fibfx at line 9 (2971 times)]\u001b[0m\n",
-      "Cell \u001b[0;32mIn[12], line 9\u001b[0m, in \u001b[0;36mfibfx\u001b[0;34m(num)\u001b[0m\n\u001b[1;32m      7\u001b[0m     i \u001b[38;5;241m=\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m+\u001b[39m (i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m     fib_seq\u001b[38;5;241m.\u001b[39mappend(i)\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fibfx(i)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fib_seq\n",
-      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
      ]
     }
    ],
    "source": [
-    "def fibfx(num):\n",
-    "    fib_seq = []\n",
-    "    i = 0\n",
-    "    fib_seq.append(i)\n",
-    "    while i <= num:\n",
-    "        i = 2\n",
-    "        i = (i-1) + (i-2)\n",
-    "        fib_seq.append(i)\n",
-    "        return fibfx(i)\n",
+    "def fib(i):\n",
+    "    if(i <= 1):\n",
+    "        return i\n",
     "    else:\n",
-    "        return fib_seq\n",
+    "        return fib(i-1) + fib(i-2)\n",
+    "\n",
+    "    \n",
+    "def fibfx(num):\n",
+    "    for i in range(0, num+1):\n",
+    "        print(fib(i))\n",
+    "\n",
     "        \n",
     "fibfx(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# in class \n",
-    "def factorial(x):\n",
-    "    i = 1\n",
-    "    output = 1\n",
-    "    while i <= x:\n",
-    "        output *= i\n",
-    "        i += 1\n",
-    "    return output\n",
-    "\n",
-    "factorial(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3527,17 +3494,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gen(num):\n",
+    "    # give that number squared all the way down to zero \n",
+    "    for i in range(0, num+1):\n",
+    "        yield i**2 \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for yielded_val in gen(10):\n",
+    "    print(yielded_val)"
+   ]
   },
   {
    "cell_type": "code",
